--- a/.github/workflows/lab2-workflow.yml
+++ b/.github/workflows/lab2-workflow.yml
@@ -20,6 +20,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: Printing Custom Message
-       run: echo "${{inputs.custom-message}}
+       run: echo "${{inputs.custom_message}}
     
     
